# AGENTFlow

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/en/: connector.md  index.md  llm.md  parser.md
doc/zh/: connector.md  index.md  llm.md  parser.md
scripts/: test_arxiv_connector_minimal.py  test_litellm_minimal.py  test_mineru_minimal.py
src/agentflow/: __init__.py
src/agentflow/connectors/: __init__.py  arxiv_connector.py  base.py
src/agentflow/llms/: __init__.py  base.py  litellm_client.py
src/agentflow/parsers/: __init__.py  base.py  mineru_parser.py
