[project]
name = "agentflow"
version = "0.1.0"
description = "Utilities and wrappers for building AI agents, including MinerU and LiteLLM integrations."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "AGENTFlow Contributors" }
]
dependencies = [
    "litellm>=1.82.6",
    "mineru>=3.0.1",
]

[project.optional-dependencies]
mineru-pipeline = [
    "dill>=0.3.8,<1",
    "PyYAML>=6.0.1,<7",
    "ftfy>=6.3.1,<7",
    "shapely>=2.0.7,<3",
    "pyclipper>=1.3.0,<2",
    "omegaconf>=2.3.0,<3",
    "torch>=2.6.0,<3",
    "torchvision",
    "transformers>=4.57.3,<5.0.0",
    "onnxruntime>1.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/agentflow"]
