[project]
name = "buua-agentflow"
version = "0.1.1"
description = "Utilities and wrappers for building AI agents, including MinerU and LiteLLM integrations."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
  { name = "AGENTFlow Contributors" }
]
keywords = ["agents", "llm", "liteLLM", "mineru", "arxiv", "python-library"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/buua436/AGENTFlow"
Repository = "https://github.com/buua436/AGENTFlow.git"
Issues = "https://github.com/buua436/AGENTFlow/issues"

[project.optional-dependencies]
llms = [
    "litellm>=1.82.6",
]
mineru = [
    "mineru>=3.0.1",
]
mineru-pipeline = [
    "mineru>=3.0.1",
    "dill>=0.3.8,<1",
    "PyYAML>=6.0.1,<7",
    "ftfy>=6.3.1,<7",
    "shapely>=2.0.7,<3",
    "pyclipper>=1.3.0,<2",
    "omegaconf>=2.3.0,<3",
    "torch>=2.6.0,<3",
    "torchvision",
    "transformers>=4.57.3,<5.0.0",
    "onnxruntime>1.17.0",
    "albumentations>=1.4.20,<3",
]
all = [
    "litellm>=1.82.6",
    "mineru>=3.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/agentflow"]
